--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "zenclean-web",
   "private": true,
@@ -10,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@google/genai": "*"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
